'Fixed' width issue by subtracting a fudge factor from the received width. Added statements to check for incorrect grid size input. Styled and moved button to make it more visible. Corrected html header and added doc type. This broke the javascript so I changed giving each div a w/h to padding. Did the opacity extra credit but commented it out because I don't like how it looks.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	margin:0;
+  margin: 0;
 }
 
 .container {
@@ -8,4 +8,13 @@ body {
 }
 
 .square {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+button {
+  padding: 10px;
+  margin-left: 50px;
+  border: solid 3px black;
+  border-radius: 5px;
 }
